--- a/package.json
+++ b/package.json
@@ -9,7 +9,6 @@
     "@mui/icons-material": "^5.11.11",
     "@mui/material": "^5.11.15",
     "@redux-devtools/extension": "^3.2.5",
-    "@testing-library/jest-dom": "^5.16.5",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
     "react": "^18.2.0",
@@ -42,5 +41,8 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "devDependencies": {
+    "@testing-library/jest-dom": "^5.16.5"
   }
 }
